# drivers

./: LICENSE  README.md
C++/C++_Primer/: .cproject  .project
C++/C++_Reference/: .autotools  .cproject  .project  Makefile  Makefile.in  NEWS  README  config.status  configure  configure.ac  configure.ac~  configure~
C++/C++_Reference/src/: 01_char_to_string  01_char_to_string.cpp  02_exceptionex  02_exceptionex.cpp  03_serialize_obj  03_serialize_obj.cpp  04_serialize_to_string  04_serialize_to_string.cpp  05_null_ptr  05_null_ptr.cpp  06_void_ptr  06_void_ptr.cpp  07_sizeof_in_array_declaration  07_sizeof_in_array_declaration.cpp  08_mkpasswd  08_mkpasswd.cpp  09_serialize_to_string_with_pad  09_serialize_to_string_with_pad.cpp  10_atoi_with_pad  10_atoi_with_pad.cpp  11_clone_master  11_clone_master.cpp  12_clone_slave  12_clone_slave.cpp  13_vector_structure  13_vector_structure.cpp  14_chronos_timer_api  14_chronos_timer_api.cpp  15_stoi  15_stoi.cpp  16_bitfield_union  16_bitfield_union.cpp  17_sscanf_date_time  17_sscanf_date_time.cpp  18_opasswd_del  18_opasswd_del.cpp  19_bitset_to_bitfield  19_bitset_to_bitfield.cpp  20_void_ptr_cast  20_void_ptr_cast.cpp  (+8 more)
C++/C++_Reference/src/.deps/: 01_char_to_string.Po  02_exceptionex.Po  03_serialize_obj.Po  04_serialize_to_string.Po  05_null_ptr.Po  06_void_ptr.Po  07_sizeof_in_array_declaration.Po  08_mkpasswd.Po  09_serialize_to_string_with_pad.Po  10_atoi_with_pad.Po  11_clone_master.Po  12_clone_slave.Po  13_vector_structure.Po  14_chronos_timer_api.Po  15_stoi.Po  16_bitfield_union.Po  17_sscanf_date_time.Po  18_opasswd_del.Po  19_bitset_to_bitfield.Po  20_void_ptr_cast.Po  21_bitset_for_loop.Po  22_factory_cfg.Po  c++_char_to_string.Po  c++_exceptionex.Po  ex_serialize_obj.Po
C++/C++_UT_backtrace/: .autotools  .cproject  .project  Makefile  Makefile.in  NEWS  README  config.status  configure  configure.ac
C++/C++_UT_bitset_stl/: .autotools  .cproject  .project  Makefile  NEWS  README  config.status  configure  configure.ac
C++/C++_UT_break_nested_while/: .autotools  .cproject  .project  Makefile  NEWS  README  config.status  configure  configure.ac
C++/C++_UT_cfg_read/: .autotools  .cproject  .project  Makefile  Makefile.in  README  config.status  configure  configure.ac  configure~  test.txt
C++/C++_UT_event_log/: .autotools  .cproject  .project  Makefile  NEWS  README  config.status  configure  configure.ac
C++/C++_UT_float_multiply_integer/: .autotools  .cproject  .project  Makefile  NEWS  README  config.status  configure  configure.ac
C++/C++_UT_struct_initialization/: .cproject  (+1 more)
C/C_UT_setip/: README  configure.ac
C/C_UT_setip/src/: Makefile.am  main.c
C/C_UT_timer/: Makefile.in  README  configure  configure.ac
C/C_UT_timer/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
C/C_UT_timer/src/: Makefile.am  Makefile.in  main.c
C/C_UT_timer_expired/: .autotools  .cproject  .project  Makefile  Makefile.in  NEWS  README  config.status  configure  configure.ac
C/C_UT_timer_expired/autom4te.cache/: output.1  requests  traces.0  traces.1
C/C_UT_timer_expired/src/: Makefile  Makefile.am  Makefile.in  ut_timer_expired.c
C/C_UT_timer_expired/src/.deps/: ut_timer_expired.Po
autotools/: README.md
autotools/04_Makefile_in_lib/: Makefile  Makefile.in  config.status  configure  configure.ac  program.cc
autotools/04_Makefile_in_lib/autom4te.cache/: output.0  requests  traces.0
doc/: README
drivers/: token
kicad/: 9-16.sim
math/: Sequences_series.xoj  Trignometry.xoj
ngspice/: 00-vdiv.sp  01-ac-rms.sp  01-ac_rms.control  02-ac_plot.sp  03-charge_cap.sp  04-abs.sp  05-dual_RC_ladder.sp  06-sine_wave.sp  08-add_sine_wave_with_0_phase.sp  09-add_sine_wave_parallel.sp  10-add_sine_wave_45deg_phase.sp  11-add_sine_wave_90deg_phase.sp  12-add_sine_wave_180deg_phase.sp  Electronic_simulation.xopp  circuits.xoj  electronics_journal.xoj
octave/: octave-workspace  rad.m  sine.m
(+767 files in other folders)
